--- a/SS4864 Final Project.Rmd
+++ b/SS4864 Final Project.Rmd
@@ -26,12 +26,9 @@ use_vignette("my_function_bootstrap")
 library(tidyverse)
 library(readr)
 tortoise <- read_csv("gopher_tortoise.csv")
-run_model(tortoise, "tortoise")[[4]][[2]]
+run_model(tortoise, "tortoise")
 
-summary(glmer(shells~prev+offset(log(Area))+factor(year)+(1|Site),
-                   family=poisson,
-                   data=data))
-Y_btsp
-bootstrap$data[[2]]
+para_boot(tortoise, "tortoise", 50)
+
 ```
 
