Plot for sd to choose B.

--- a/SS4864 Final Project.Rmd
+++ b/SS4864 Final Project.Rmd
@@ -5,9 +5,9 @@ date: "11/12/2022"
 output: pdf_document
 ---
 
+# Initial setting
 ```{r}
 library(usethis)
-library(lme4)
 
 # Initial commit to github
 use_git(message = "Initial commit. Dec.11")
@@ -22,12 +22,26 @@ use_r("my_function_bootstrap.R")
 
 # Create vignette
 use_vignette("my_function_bootstrap")
+```
 
+# Experiment
+```{r}
 library(tidyverse)
+library(lme4)
 library(readr)
 tortoise <- read_csv("gopher_tortoise.csv")
-run_model(tortoise, "tortoise")
 
-para_boot(tortoise, "tortoise", 50)
+run_model(tortoise, "tortoise")
+para_boot(tortoise, "tortoise", 30)
+
+std <- c()
+index <- seq(from = 10, to = 300, by = 10)
+for (i in index){
+  std <- c(std, para_boot(tortoise, "tortoise", i)[[3]])
+}
+
+sd_plot <- data.frame(B = index, Standard_deviation = std) %>%
+  ggplot() + geom_line(aes(x = B, y = Standard_deviation), linewidth = 0.8) + ggtitle("Plot of standard deviation for bootstrap samples vs different value of B") + theme_bw()
+sd_plot
 ```
 
