--- a/vignettes/my_function_bootstrap.Rmd
+++ b/vignettes/my_function_bootstrap.Rmd
@@ -15,5 +15,19 @@ knitr::opts_chunk$set(
 ```
 
 ```{r setup}
+# Load packages
 library(Xu.Jin.4864final.package)
+suppressMessages(library(dplyr))
+suppressMessages(library(ggplot2))
+suppressMessages(library(tidyverse))
 ```
+
+```{r}
+library(readr)
+tortoise <- read_csv("gopher_tortoise.csv", show_col_types = FALSE)
+run_model(tortoise, "tortoise")
+
+para_boot(tortoise, "tortoise", 50)
+```
+
+
