--- a/vignettes/my_function_bootstrap.Rmd
+++ b/vignettes/my_function_bootstrap.Rmd
@@ -35,7 +35,7 @@ tortoise_clean <- tortoise %>%
   select("Site", "year", "shells", "Area", "prev")
 ```
 
-The first plot shows the relationship between shells and year in original data set, it is grouped by each site.
+The first plot shows the relationship between shells and year in original data set, it is grouped by each site. Each site shows different tendency of shell number in these three years, some increase, while other decrease.
 ```{r}
 # Relationship between shells and year
 tortoise_clean %>%
@@ -50,49 +50,37 @@ tortoise_clean %>%
   scale_y_continuous(breaks=seq(0, 9, 2))
 ```
 
-Second plot shows relationship between area and shell. In our model, we consider the effects bring by area.
-
-```{r}
-tortoise_clean %>%
-  ggplot(aes(x = Area, y = shells, fill = Site)) +
-  geom_bar(stat="identity") + 
-  ggtitle("Shells Frequency Plot") +
-  ylab("Number of Shells") +
-  # facet_wrap(. ~ Site, ncol=3) +
-  theme_bw() + 
-  theme(plot.title = element_text(hjust = 0.5)) + 
-  theme(legend.position = "none") +
-  scale_y_continuous(breaks=seq(0, 9, 2))
-```
+Second plot shows relationship between area and shell. As plot shows, increasing in the area will somehow lead to an increase in number of shells. Hence. in the model, to avoid area effects, number of shells is divided by area.
 
 ```{r}
 # Relationship between shells and sites area
 tortoise_clean %>%
-  ggplot(aes(x = Area, y = factor(shells))) +
-  geom_bar(stat = "identity") + 
-  ggtitle("Shells Frequency Plot") +
+  ggplot(aes(x = Area, y = shells)) +
+  geom_line() + 
+  ggtitle("Shells Frequency VS Area") +
   ylab("Number of Shells") +
+  facet_wrap(. ~ year, ncol=3) +
   theme_bw() + 
   theme(plot.title = element_text(hjust = 0.5)) + 
-  scale_y_discrete(breaks=seq(0, 9, 1)) +
-  scale_x_continuous(breaks=seq(0, 400, 50))
+  scale_x_continuous(breaks=seq(0, 60, 10))
 ```
 
 ```{r}
+# Divide shells by area
 tortoise2 <- tortoise_clean %>%
   mutate(count_per_area = shells/Area)
 ```
 
 ```{r}
-# Relationship between shells and sites area
+# Relationship between average shells and prev
 tortoise2 %>%
-  ggplot(aes(x = prev, y = factor(shells))) +
-  geom_bar(stat = "identity") + 
-  ggtitle("Shells Frequency Plot") +
+  ggplot(aes(x = prev, y = count_per_area)) +
+  geom_line() + 
+  ggtitle("Average Shells Frequency VS prev") +
+  ylab("Average Number of Shells") +
+  facet_wrap(. ~ year, ncol=3) +
   theme_bw() + 
   theme(plot.title = element_text(hjust = 0.5))
-  #scale_x_continuous(breaks=seq(0, 9, 1)) +
-  #scale_y_continuous(breaks=seq(0, 400, 50))
 ```
 
 
