--- a/vignettes/my_function_bootstrap.Rmd
+++ b/vignettes/my_function_bootstrap.Rmd
@@ -24,7 +24,8 @@ suppressMessages(library(lme4))
 suppressMessages(library(readr))
 ```
 
-# Part1. Exploretary Data Analysis
+# 1. Exploretary Data Analysis
+
 ```{r}
 # Import the data set
 library(readr)
@@ -35,7 +36,9 @@ tortoise_clean <- tortoise %>%
   select("Site", "year", "shells", "Area", "prev")
 ```
 
-The first plot shows the relationship between shells and year in original data set, it is grouped by each site. Each site shows different tendency of shell number in these three years, some increase, while other decrease.
+## 1.1 Relationship between number of shells and year effect
+
+The plot shows the relationship between shells and year in original data set, it is grouped by each site. Each site shows different tendency of shell number in these three years, some increase, while other decrease.
 ```{r}
 # Relationship between shells and year
 tortoise_clean %>%
@@ -50,7 +53,11 @@ tortoise_clean %>%
   scale_y_continuous(breaks=seq(0, 9, 2))
 ```
 
-Second plot shows relationship between area and shell. As plot shows, increasing in the area will somehow lead to an increase in number of shells. Hence. in the model, to avoid area effects, number of shells is divided by area.
+\newpages
+
+## 1.2 Relationship between number of shells and area of each sites
+
+This plot shows relationship between area and shell. As plot shows, increasing in the area will somehow lead to an increase in number of shells. Hence. in the model, to avoid area effects, number of shells is divided by area.
 
 ```{r}
 # Relationship between shells and sites area
@@ -65,6 +72,26 @@ tortoise_clean %>%
   scale_x_continuous(breaks=seq(0, 60, 10))
 ```
 
+\newpages
+
+## 1.3 Relationship between average number of shells and seroprevalence
+
+The first plot compares the relationship between number of shells and seroprevalence. However, we should consider the effect bring by area of each site.
+
+```{r}
+# Relationship between shells and seroprevalance (prev)
+tortoise_clean %>%
+  ggplot(aes(x = prev, y = shells)) +
+  geom_line() + 
+  ggtitle("Shells Frequency VS prev") +
+  ylab("Average Number of Shells") +
+  facet_wrap(. ~ year, ncol=3) +
+  theme_bw() + 
+  theme(plot.title = element_text(hjust = 0.5))
+```
+
+The second plot compares the relationship between average number of shells and seroprevalence, where average number of shells means the number of shells divided by area. The observation here is, as seroprevalence increase, the number of shells also generally increase.
+
 ```{r}
 # Divide shells by area
 tortoise2 <- tortoise_clean %>%
@@ -72,7 +99,7 @@ tortoise2 <- tortoise_clean %>%
 ```
 
 ```{r}
-# Relationship between average shells and prev
+# Relationship between average shells and seroprevalance (prev)
 tortoise2 %>%
   ggplot(aes(x = prev, y = count_per_area)) +
   geom_line() + 
@@ -83,10 +110,24 @@ tortoise2 %>%
   theme(plot.title = element_text(hjust = 0.5))
 ```
 
+# Part2. Explanation of model fitting and bootstrap process
 
-
+## 2.1 Fitting poisson model
+In this part, we use function provided by Dr. Simon Borner to fit a poisson model for this data set. We use number of shells as response variable, with predictors inclusing seroprevalance, area, year and random effect of site.
 ```{r}
-run_model(tortoise, "tortoise")
-para_boot(tortoise, "tortoise", 50)
+suppressMessages(run_model(tortoise, "tortoise"))
+```
+
+Summary of model shows that this data set has no random effects with 0 random effects variance.
+
+## 2.1 Bootstrap and refitting 
+```{r}
+
+```
+
+
+# Part3. Explanation of summary output
+```{r}
+
 ```
 
