--- a/vignettes/my_function_bootstrap.Rmd
+++ b/vignettes/my_function_bootstrap.Rmd
@@ -145,16 +145,9 @@ suppressMessages(para_boot(tortoise, "tortoise", 30))
 
 # 4. Explanation of Summary Output
 ```{r}
-std <- c()
-index <- seq(from = 10, to = 300, by = 10)
-#for (i in index){
-  #std <- c(std, para_boot(tortoise, "tortoise", i)[[3]])
-#}
-
-std <- data.frame(index = seq(from = 10, to = 300, by = 10))
-std <- std %>%
-  mutate(std_value = para_boot(tortoise, "tortoise", index)[[3]])
-
+std <- data.frame(index = seq(from = 10, to = 300, by = 10)) %>%
+  group_by(index) %>%
+  mutate(std_value = suppressMessages(para_boot(tortoise, "tortoise", index)[[3]]))
 
 sd_plot <- data.frame(B = index, Standard_deviation = std) %>%
   ggplot() + geom_line(aes(x = B, y = Standard_deviation), linewidth = 0.8) + ggtitle("Plot of standard deviation for bootstrap samples vs different value of B") + theme_bw()
