--- a/vignettes/my_function_bootstrap.Rmd
+++ b/vignettes/my_function_bootstrap.Rmd
@@ -15,6 +15,7 @@ knitr::opts_chunk$set(
 ```
 
 ```{r setup}
+knitr::opts_chunk$set(echo = FALSE)
 # Load packages
 library(Xu.Jin.4864final.package)
 suppressMessages(library(dplyr))
@@ -35,7 +36,8 @@ This Vignette including Exploratory Data Analysis of original data set, Model Fi
 
 
 # 2. Exploratory Data Analysis
-```{r}
+In this section, because the density and type value are not used in fitting model, so we clean these two columns out.
+```{r echo=TRUE}
 # Import the sample data set
 library(readr)
 tortoise <- read_csv("gopher_tortoise.csv", show_col_types = FALSE)
@@ -126,7 +128,7 @@ In this part, we use the function "run_model" provided by Dr. Simon Bonner to fi
 
 To use this function, the first parameter is the data set, and the second means example we use. Note that this function currently only can fit with four example data sets, 2 of poisson model and 2 of binomial model.
 
-```{r}
+```{r echo=TRUE, warning=FALSE}
 suppressMessages(run_model(tortoise, "tortoise"))
 ```
 
@@ -139,29 +141,39 @@ Bootstrap process is implementing by the function "para_boot". To make this func
 By running this function, the result will be a table containing value of point estimation, re-sampled $\beta_1$ value, standard deviation, 95%CI and p value of $\beta_1$.
 
 Here, we run the bootstrap function with sample size 30 as an example.
-```{r}
+```{r echo=TRUE, warning=FALSE}
 suppressMessages(para_boot(tortoise, "tortoise", 30))
 ```
 
 # 4. Explanation of Summary Output
+Here is the process of picking best value of B, the sample size of bootstrap. We aim to pick a proper value of B and we expect it will converge at some point. Here, we pick mean square error (MSE) to test the variation and bias.
+```{r warning=FALSE}
+# Avoid warning message
+options(dplyr.summarise.inform = FALSE)
 
-From previous running output, the first value is the point estimate of $\beta_1$ after fitting the model. This is the original value of $\beta_1$ that we obtain before doing bootstrap to refit the model. The second group of value is the $\beta_1^*$ we obtain after refitting model with new generated random effects. A clear observation here is, all these $\beta_1^*$ are around the original point estimate, some above it, some below it, but still value close. This phenomenon also can be viewed from very small standard error, which is the third value. It means these data do not cause value of $\beta_1$ fluctuating a lot. The forth part of output is our 95% confidence interval. 
-
-The last value is p-value of hypothesis test in bootstrap. Here we rerun the bootstrap at the condition that $\beta_1$ is equal to 0, because we need to approximate the sampling distribution under the null hypothesis, so this is different from what we compute standard error and confidence interval. This result shows that our p-value is very small, which means we have evidence to reject our null hypothesis, where null hypothesis is $H_0: \beta_1 = 0$. Since it is rejected, then we know that the impact of seroprevalance to number of shells is significant, we conclude that increasing in seroprevalance will affect number of shells.
-
-
-
-Here is the process of picking best value of B, the sample size of bootstrap. We aim to pick a proper value of B and we expect it will converge at some point.
-```{r}
 MSE <- data.frame(index = seq(from = 10, to = 300, by = 10)) %>%
   group_by(index) %>%
   summarize(boot_sample = suppressMessages(para_boot(tortoise, "tortoise", index))) %>%
   mutate(value = mean(boot_sample[[2]] - boot_sample[[1]])^2, .groups = "keeps")
 
 MSE_plot <- data.frame(B = MSE$index, MSE = MSE$value) %>%
-  ggplot() + geom_line(aes(x = B, y = MSE), linewidth = 0.8) + ggtitle("Plot of MSE for bootstrap samples vs different value of B") + theme_bw()
+  ggplot() +
+  geom_line(aes(x = B, y = MSE), linewidth = 0.8) +
+  ggtitle("Plot of MSE for bootstrap samples vs different value of B") +
+  theme_bw()
 MSE_plot
 ```
 
+From this plot, we find out after 100, the MSE value started to converge, which means that it is enough if we only keep value of B as 100. 
 
+Now, we rerun our bootstrap function with B equal to 100.
+```{r echo=TRUE, warning=FALSE}
+suppressMessages(para_boot(tortoise, "tortoise", 100))
+```
+
+In this output, the first value is the point estimate of $\beta_1$ after fitting the model. This is the original value of $\beta_1$ that we obtain before doing bootstrap to refit the model. 
+
+The second group of value is the $\beta_1^*$ we obtain after refitting model with new generated random effects. A clear observation here is, all these $\beta_1^*$ are around the original point estimate, some above it, some below it, but still value close. This phenomenon also can be viewed from very small standard error, which is the third value. It means these data do not cause value of $\beta_1$ fluctuating a lot. The forth part of output is the value of our 95% confidence interval. 
+
+The last value is p-value of hypothesis test in bootstrap. Here we rerun the bootstrap at the condition that $\beta_1$ is equal to 0, because we need to approximate the sampling distribution under the null hypothesis, so this is different from what we compute standard error and confidence interval. This result shows that our p-value is very small, which means we have evidence to reject our null hypothesis, where null hypothesis is $H_0: \beta_1 = 0$. Since it is rejected, then we know that the impact of seroprevalance to number of shells is significant, we conclude that increasing in seroprevalance will affect number of shells.
 
